--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "yash",
+  "name": "demo",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:8080",
+
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -36,3 +38,4 @@
     ]
   }
 }
+
